# signal-flow

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
artifacts/: .gitkeep  feature_list.json
configs/: config.yaml
data/ohlcv/: .gitkeep
scripts/: benchmark.py  create_topics.sh  run_demo.sh
src/: __init__.py
src/common/: __init__.py  config.py  kafka_utils.py  logging.py  schemas.py
src/dashboard/: __init__.py  kafka_consumer.py  server.py
src/dashboard/static/: index.html
src/data/: __init__.py  download.py
src/feature_service/: __init__.py  indicators.py  main.py  scaler.py
src/inference_service/: __init__.py  buffer.py  main.py
src/live_service/: __init__.py  main.py
src/monitoring/: __init__.py  metrics.py
src/replay_service/: __init__.py  main.py
src/training/: __init__.py  dataset.py  model.py  train.py
tests/: __init__.py  conftest.py  test_buffer.py  test_indicators.py  test_model.py  test_schemas.py
